# CycleEnumeration-GPU

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md
benchmarks/: README.md  datasets.md  run_cycle_benchmarks.py
benchmarks/data/: README.md
benchmarks/results/: README.md
benchmarks/scripts/: collect_results.py  compare_reference.sh  plot_results.py  profile_cuda.sh  run_benchmarks.sh  run_dataset_benchmarks.py  run_dynamic_benchmarks.py  run_openmp_benchmarks.sh  run_rank_benchmarks.py  tune_cuda.py
cmake/: CycleEnumOptions.cmake  Doxygen.cmake  Sanitizers.cmake
docs/: EXPERIMENTS.md  blocking_backend_build_and_test.md  rank_backend_build_and_test.md
docs/design/: algorithm_notes.md  baseline_comparison.md  cuda_cycle_union.md  cuda_memory_layout.md  cuda_strategy.md  cuda_temporal_bundling.md  cuda_timestamp_lookup.md  cuda_tuning.md  cuda_work_splitting.md  cycle_union.md  dynamic_update.md  openmp_strategy.md  openmp_tasks.md  temporal_johnson.md  validation.md
docs/doxygen/: Doxyfile.in  modules.dox
include/cycle_enum/core/: graph.hpp  graph_view.hpp  histogram.hpp  options.hpp  result.hpp  timestamp.hpp  version.hpp
include/cycle_enum/cuda/: cuda_branch_split.hpp  cuda_config.hpp  cuda_graph.hpp  cuda_johnson.hpp  cuda_profiling.hpp  cuda_timestamp.hpp  cuda_timestamp_groups.hpp  cuda_visited_set.hpp  cuda_work_item.hpp  cuda_work_queue.hpp
include/cycle_enum/dynamic/: batch_generator.hpp  cycles_through_edge.hpp  directed_graph.hpp  edge_change.hpp  update_cuda.hpp  update_openmp.hpp  update_sequential.hpp
include/cycle_enum/engine/: histogram_engine.hpp
include/cycle_enum/openmp/: openmp_config.hpp  openmp_johnson.hpp  openmp_read_tarjan.hpp  openmp_read_tarjan_tasks.hpp  openmp_temporal_johnson.hpp  openmp_temporal_read_tarjan.hpp
include/cycle_enum/sequential/: bruteforce.hpp  cycle_union.hpp  johnson.hpp  read_tarjan.hpp  temporal_johnson.hpp  temporal_read_tarjan.hpp
scripts/: h100_smoke.sh
src/cli/: cycle_enum_main.cpp
src/core/: graph.cpp  graph_builder.cpp  histogram.cpp  options.cpp  result.cpp  timestamp.cpp  version.cpp
src/cuda/: cuda_branch_split.cpp  cuda_config.cpp  cuda_graph.cpp  cuda_johnson.cpp  cuda_johnson_blocked_kernel.cu  cuda_johnson_kernel.cu  cuda_johnson_rank_kernel.cu  cuda_timestamp_groups.cpp  cuda_work_item.cpp  cuda_work_queue.cpp
src/dynamic/: batch_generator.cpp  cycles_through_edge.cpp  directed_graph.cpp  edge_change.cpp  update_cuda.cpp  update_cuda_kernel.cu  update_openmp.cpp  update_sequential.cpp
src/engine/: histogram_engine.cpp
src/openmp/: openmp_config.cpp  openmp_johnson.cpp  openmp_read_tarjan.cpp  openmp_read_tarjan_tasks.cpp  openmp_temporal_johnson.cpp  openmp_temporal_read_tarjan.cpp
src/sequential/: bruteforce.cpp  cycle_union.cpp  johnson.cpp  read_tarjan.cpp  temporal_johnson.cpp  temporal_read_tarjan.cpp
tests/: CMakeLists.txt
tests/data/: sample_temporal.txt
tests/integration/: cli_sequential_test.cpp  cuda_blocking_test.cpp  cuda_johnson_test.cpp  cuda_rank_test.cpp  dynamic_update_cuda_test.cpp  dynamic_update_openmp_test.cpp  dynamic_update_parity_test.cpp  johnson_static_test.cpp  johnson_time_window_test.cpp  openmp_johnson_test.cpp  openmp_read_tarjan_test.cpp  openmp_task_parity_test.cpp  openmp_temporal_johnson_test.cpp  openmp_temporal_read_tarjan_test.cpp  path_bundling_test.cpp  read_tarjan_static_test.cpp  read_tarjan_time_window_test.cpp  sequential_parity_test.cpp  temporal_johnson_test.cpp  temporal_read_tarjan_test.cpp
tests/unit/: batch_generator_test.cpp  bruteforce_test.cpp  cuda_branch_split_test.cpp  cuda_config_test.cpp  cuda_graph_test.cpp  cuda_profiling_test.cpp  cuda_timestamp_groups_test.cpp  cuda_timestamp_test.cpp  cuda_visited_set_test.cpp  cuda_work_item_test.cpp  cuda_work_queue_test.cpp  cycle_union_test.cpp  cycles_through_edge_test.cpp  directed_graph_test.cpp  edge_change_test.cpp  graph_parser_test.cpp  graph_view_test.cpp  histogram_engine_test.cpp  histogram_test.cpp  openmp_config_test.cpp  options_test.cpp  result_test.cpp  smoke_test.cpp  temporal_bruteforce_test.cpp  timestamp_test.cpp
